added a loop to render the cards

--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,7 @@
   </head>
   <body>
 
-    <div class="memory-game">
-
-      
-      
-    </div>
+    <div class="memory-game"></div>
 
     <script src="script.js"></script>
   </body>
