added html for end game

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,11 @@
     <title>Fuzzy Memory</title>
   </head>
   <body>
+    
+    <div class="end-game">
+      <h2>Good job!!</h2>
+      <button>Play again!</button>
+    </div>
 
     <div class="memory-game"></div>
 
