--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,8 @@
         <title>Fuzzy Memory</title>
     </head>
     <body>
-        
+        <h1>Fuzzy Memory</h1>
         <div class="end-game">
-            <h2>Good job!!</h2>
             <button>Play again!</button>
         </div>
 
