adden a counter to the game board

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     </head>
     <body>
         <h1>Fuzzy Memory</h1>
+        <p>Pairs: <span>0</span></p>
         <div class="end-game">
             <button>Play again!</button>
         </div>
