--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
         <title>Fuzzy Memory</title>
     </head>
     <body>
-        <h1>Fuzzy Memory</h1>
+        <h1>Fuzzy<span>Memory</span></h1>
         <p>Pairs: <span>0</span></p>
         <div class="end-game">
             <button>Play again!</button>
