optimized for iphone

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
         <h1>Fuzzy<span>Memory</span></h1>
 
         <div class="end-game">
-            <p>Pairs: <span>0</span></p>
+            <p>Pairs: <span>0</span>/8</p>
             <button>Play again!</button>
         </div>
 
