created shakeing animation

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 
         <div class="end-game">
             <p>Pairs: <span>0</span>/8</p>
-            <button>Play again!</button>
+            <button>Restart</button>
         </div>
 
         <div class="memory-game"></div>
