tried to make a chooseLevel function

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,17 @@
         <title>Fuzzy Memory</title>
     </head>
     <body>
+        <div class="overlay">
+            <div>
+                <h2>Choose level</h2>
+                <div class="overlay-buttons">
+                    <button data-level="1">Easy</button>
+                    <button data-level="2">Medium</button>
+                    <button data-level="3">Hard</button>
+                </div>
+            </div>
+        </div>
+
         <h1>Fuzzy <span>Memory</span></h1>
 
         <div class="end-game">
