finally found a soulution to to the choose level function

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
         <h1>Fuzzy <span>Memory</span></h1>
 
         <div class="end-game">
-            <p>Pairs: <span>0</span>/8</p>
+            <p>Pairs: <span class="first-number">0</span>/<span class="second-number">8</span></p>
             <button>Restart</button>
         </div>
 
