changed the file structure

--- a/public/index.html
+++ b/public/index.html
@@ -29,5 +29,7 @@
         <div class="memory-game"></div>
 
         <script src="script.js"></script>
+        <script src="functions.js"></script>
+
     </body>
 </html>
