--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,8 @@
         <h1>Fuzzy <span>Memory</span></h1>
 
         <div class="end-game">
-            <p>Pairs: <span class="first-number">0</span>/<span class="second-number">8</span></p>
+            <p class="pairs">Pairs: <span class="first-number">0</span>/<span class="second-number">8</span></p>
+            <p class="clicks">Clicks: <span class="first-click">0</span>/<span class="second-click">8</span></p>
             <button>Restart</button>
         </div>
 
