--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
         <title>Fuzzy Memory</title>
     </head>
     <body>
-        <div class="conatiner">
+        <div class="container">
             <div class="overlay">
                 <div>
                     <h2>Choose level</h2>
