--- a/public/index.html
+++ b/public/index.html
@@ -2,15 +2,13 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <meta
-            name="viewport"
-            content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
-        />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
         <link rel="stylesheet" href="style.css" />
         <title>Fuzzy Memory</title>
     </head>
     <body>
+
         <div class="container">
             <div class="overlay">
                 <div>
@@ -26,17 +24,14 @@
             <h1>Fuzzy <span>Memory</span></h1>
 
             <div class="end-game">
-                <p class="pairs">
-                    Pairs: <span class="first-number">0</span>/<span class="second-number">8</span>
-                </p>
-                <p class="clicks">
-                    Clicks: <span class="first-click">0</span>/<span class="second-click">8</span>
-                </p>
+                <p class="pairs">Pairs: <span class="first-number">0</span>/<span class="second-number">8</span></p>
+                <p class="clicks">Clicks: <span class="first-click">0</span>/<span class="second-click">8</span></p>
                 <button>Restart</button>
             </div>
-
+            
             <div class="memory-game"></div>
         </div>
+
         <script src="script.js"></script>
         <script src="functions.js"></script>
     </body>
