added a browser tab image

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
         <link rel="stylesheet" href="style.css" />
+        <link rel="icon" href="https://i.imgur.com/dFPhbOQ.png">
         <title>Fuzzy Memory</title>
     </head>
     <body>
@@ -28,7 +29,7 @@
                 <p class="clicks">Clicks: <span class="first-click">0</span>/<span class="second-click">8</span></p>
                 <button>Restart</button>
             </div>
-            
+
             <div class="memory-game"></div>
         </div>
 
